# LumaBloom

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  appsettings.example.json  appsettings.full.example.json
.codex-skill-staging/esp32-release-flash/: SKILL.md
.codex-skill-staging/luma-bloom-release/: SKILL.md
.codex-skill-staging/pc-app-portable-release/: SKILL.md
.codex-skill-staging/release-notes-github/: SKILL.md
docs/: build-and-run.md  build.md  device-profiles.md  firmware.md  getting-started.md  protocol.md  skills-for-users.md  wiring.md
features/001-2026-07-01-user-friendly-ui-navigation/: ACCEPTANCE_CRITERIA.md  FEATURE_SPEC.md  IMPLEMENTATION_PLAN.md
firmware/: firmware_esp32c3.ino
firmware/firmware_esp32c3/: README.md
firmware/firmware_esp32c6/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/firmware_esp32c6/main/: CMakeLists.txt  app_config.h  app_main.c  device_calibration.c  device_calibration.h  device_reading.h  display_lcd.c  display_lcd.h  sensor_bh1750.c  sensor_bh1750.h  sensor_ky018.c  sensor_ky018.h  serial_command.c  serial_command.h  telemetry_serial.c  telemetry_serial.h  ui_generated_screen.c  ui_generated_screen.h  ui_screen.c  ui_screen.h
hardware/: ASSEMBLY.md  BOM.md  README.md  REVISIONS.md  WIRING.md
hardware/3d-print/: LICENSE.md  README.md
pc-app/: BrightnessSensor.ConsoleApp.csproj  Program.cs  appsettings.esp32c6.example.json  brightness-sensor.sln
pc-app/Application/: BrightnessApplication.cs  BrightnessProcessor.cs  DdcMonitor.cs  EvaluationResult.cs  IMonitorBrightness.cs  (+2 more)
(+125 files in other folders)
